Datepicker popup z-index bug fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -697,7 +697,6 @@ html, body {
 /* Added by @vdv73rus */
 .i-calend-wrap {
   position: relative;
-  z-index: 1000;
 }
 .i-calend-wrap-input {
   position: relative;
